@@ -100,8 +100,8 @@ Mob::Mob(const char*   in_name,
 		 int8   in_see_invis_undead,
 		 int8   in_see_hide,
 		 int8   in_see_improved_hide,
-		 sint16 in_hp_regen,
-		 sint16 in_mana_regen,
+		 sint32 in_hp_regen,
+		 sint32 in_mana_regen,
 		 int8	in_qglobal,
 		 int8	in_maxlevel,
 		 int32	in_scalerate
